Add JWT and Spring-Security